[gd_scene load_steps=9 format=3 uid="uid://bqsodl2pngc4o"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_v254h"]
[ext_resource type="Texture2D" uid="uid://cu61xvf2jooym" path="res://icon.svg" id="2_e26ot"]
[ext_resource type="PackedScene" uid="uid://drmg3mgdl4b4h" path="res://scenes/state_machine/state_machine.tscn" id="3_0qvud"]
[ext_resource type="Script" path="res://scripts/idle.gd" id="4_a722k"]
[ext_resource type="Script" path="res://scripts/player_movement.gd" id="4_apx5e"]
[ext_resource type="Script" path="res://scenes/move.gd" id="5_aw1gv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_bsofa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_e26ot")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tk3i"]
size = Vector2(128, 128)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_v254h")

[node name="movement_animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bsofa")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3tk3i")

[node name="movement_state_machine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("3_0qvud")]
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("move_state")]
script = ExtResource("4_a722k")
move_state = NodePath("../move")

[node name="move" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("5_aw1gv")
idle_state = NodePath("../idle")

[node name="player_movement" type="Node" parent="."]
script = ExtResource("4_apx5e")
